# danbailo-cookiecutter-template

./: .flake8  .gitignore  Dockerfile  Dockerfile.test  README.md  compose.env  compose.yaml  cookiecutter.json  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml
src/: main.py
src/common/: decorators.py  env_var.py  file.conf  logger.py
src/tests/: __init__.py
{{cookiecutter.repository_name}}/: .dockerignore  .gitignore  Dockerfile  Dockerfile.env  Makefile  Makefile-project  README.md  compose.yaml  mkdocs.yml  polaris-config.yaml  prepare_enviroment.sh  pyproject.toml
{{cookiecutter.repository_name}}/.github/: pull_request_template.md
{{cookiecutter.repository_name}}/.github/workflows/: docs.yaml  increment-version.yaml  publish.yaml  publish2.yaml  pull-request-checks.yaml  tests copy.yaml  tests.yaml
{{cookiecutter.repository_name}}/tests/commons/: test_logger.py
{{cookiecutter.repository_name}}/tests/unit/utils/: conftest.py  test_async.py  test_decorators.py  test_dict.py  test_logger.py  test_pydantic.py  test_types.py
{{cookiecutter.repository_name}}/tests/unit/utils/environment/: test_environment_variables.py  test_manager.py  test_secrets.py  utils.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/: __main__.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/commons/: decorators.py  env_var.py  logger.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/: __main__.py  settings.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/clients/: slack.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/clients/secret_manager/: __init__.py  client.py  enums.py  exceptions.py  types.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/commons/: decorators.py  logger.py  mp_scheduler.py  requests.py  tenacity.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/utils/: async.py  asyncs.py  decorators.py  dict.py  logger.py  obfuscate.py  pydantic.py  redis.py  requests.py  semaphore.py  tenacity.py  typer.py  types.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/utils/environment/: __init__.py  base.py  enums.py  manager.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/utils/environment/backends/: __init__.py  base.py  local_file.py  local_secret_manager.py  secret_manager.py
{{cookiecutter.repository_name}}/{{cookiecutter.repository_name|lower|replace("-", "_")}}/utils/redis/: config.py  exceptions.py  semaphore.py
