[tool.poetry]
name = {{cookiecutter.repository_name}}
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["Daniel Bailo <danbailoufms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
python-dateutil = "^2.8.2"
regex = "^2023.12.25"
httpx = "^0.26.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.4.4"
ruff = "^0.1.15"
mypy = "^1.8.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
coverage-badge = "^1.1.1"
mypy-extensions = "^1.0.0"

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
    "*main*"
]
sort="Cover"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pylint]
max-returns = 2

[tool.mypy]
disable_error_code = [
    "union-attr", "import-untyped", "arg-type",
    "return-value", "return", "override",
    "assignment", "var-annotated"
]
plugins = [
  "pydantic.mypy"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
