[project]
name = "{{cookiecutter.repository_name|lower|replace("-", "_")}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [
  {name = "Daniel Bailo", email = "danbailoufms@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ruff>=0.6.6",
    "typer>=0.12.3",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0.post0",
    "regex>=2024.5.15",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "pydantic>=2.7.3",
    "schedule>=1.2.2",
    "redis>=6.0.0",
    "google-cloud-secret-manager>=2.23.3",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest>=8.2.2",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.15.0",
    "mypy-extensions>=1.0.0",
    "bandit>=1.8.3",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
sort="Cover"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "F", "T100"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pylint]
max-returns = 2

[tool.mypy]
no_implicit_optional = true
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.repository_name|lower|replace("-", "_")}}"]